--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  firebase_auth: ^4.17.2
+  firebase_core: ^2.25.2
   flutter:
     sdk: flutter
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
